Rename module/script from App::wordlist/wordlist to App::GamesWordlist/games-wordlist

--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,13 @@
 version=0.12
 
-name=App-wordlist
+name=App-GamesWordlist
 
-[GenPericmdScript/GenPericmdScript::wordlist]
-url=/App/wordlist/wordlist
+[GenPericmdScript/GenPericmdScript::games_wordlist]
+url=/App/GamesWordlist/wordlist
+name=games-wordlist
 
 [@Author::PERLANCAR]
-:version=0.23
+:version=0.43
 
 [Prereqs]
 perl=5.010001
