[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,13 @@ name=games-wordlist
 [Prereqs]
 perl=5.010001
 
+; core modules
+
+strict=0
+warnings=0
+
+; non-core modules
+
 Complete::Util=0
 
 ;File::Which=0
