--- a/dist.ini
+++ b/dist.ini
@@ -31,5 +31,7 @@ App::lcpan::Call=0.07
 MetaCPAN::Client=0
 ;App::pmuninstall=0
 
-[Prereqs / DevelopSuggests]
-_SPEC::Rinci=1.1.69
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.69
